<resources>
    <string name="app_name">Contatos</string>
    <string name="iv_photograph_content_description">contet description</string>
    <string name="tv_nome_contato">Nome do contato</string>
    <string name="tv_numero_contato">(00) 9 99999999</string>
    <string name="item_menu_create">Criar Contato</string>
    <string name="item_menu_select">Selecionar</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="bt_busca">Buscar:</string>
    <string name="btn_save">Salvar contato</string>
    <string name="btn_delete">Excluir contato</string>
</resources>
