<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivPhotograph"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/iv_photograph_content_description"
        tools:src="@tools:sample/avatars"/>

    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/tv_nome_contato"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@id/ivPhotograph"
        app:layout_constraintStart_toStartOf="@id/ivPhotograph"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etTelefone"
        android:inputType="phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/tv_numero_contato"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@id/etNome"
        app:layout_constraintStart_toStartOf="@id/etNome"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSalvarConato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_save"
        app:layout_constraintTop_toBottomOf="@id/etTelefone"
        app:layout_constraintStart_toStartOf="@id/etTelefone"/>


    <Button
        android:id="@+id/btnExcluirContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:onClick="onClickExcluirContato"
        android:text="@string/btn_delete"
        app:layout_constraintStart_toEndOf="@+id/btnSalvarConato"
        app:layout_constraintTop_toTopOf="@+id/btnSalvarConato" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>