<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivPhotograph"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/iv_photograph_content_description"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tvNome"
            app:layout_constraintTop_toTopOf="@+id/ivPhotograph"
            app:layout_constraintStart_toEndOf="@+id/ivPhotograph"
            android:layout_marginLeft="16dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_nome_contato"/>

        <TextView
            android:id="@+id/tvTelefone"
            app:layout_constraintTop_toBottomOf="@+id/tvNome"
            app:layout_constraintStart_toEndOf="@+id/ivPhotograph"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_numero_contato"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>